<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bumping Bunnies</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_start">Bumping Bunnies</string>
    <string name="action_settings">Settings</string>
    <string name="known_hosts">Bekannte Server</string>
    <string name="find_devices">Server finden</string>
    <string name="make_visible">Host</string>
    <string name="app_name_solo">Bumping Bunnies Solo</string>
   
    <string name="keyboard">Classic Keyboard</string>
    <string name="analog">Analog</string>
    <string name="touch">Touch</string>
    <string name="touch_with_jump">Touch+Up</string>
    <string name="singleplayer">Singleplayer</string>
    <string name="input">Eingabe</string>
    <string name="multi_touch">Multi-Touch</string>
    <string name="pointer">Pointer</string>
    <string name="smart_pointer">Smart Pointer</string>
    <string name="ai">KI</string>
    <string name="ai_off">Aus</string>
    <string name="ai_normal">Normal</string>
    <string name="ai_runner">Läufer</string>
    <string name="fling_touch">Touch+Fling</string>
    <string name="touch_press">Touch+Hold</string>
    <string name="touch_release">Touch+Release</string>
    <string name="world">Welt</string>
    <string name="world_simple">Einfach</string>
    <string name="world_first">Demo</string>
    <string name="world_classic">Classic</string>
    <string name="player">Spieler</string>
    <string name="default_player">2</string>
    <string name="zoom">Zoom</string>
    <string name="default_zoom">5</string>
    <string name="hardware_keyboard">Hardware-Keyboard</string>
    <string name="number_player">Spieler</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="wlan">W-LAN</string>
    <string name="room_start">Start</string>
    <string name="app_name_room">Netzwerk</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="distributed_keyboard">Software Keyboard</string>
    <string name="world_test">Test</string>
    <string name="ip">IP</string>
    <string name="speed">Geschwindigkeit</string>
    <string name="connect">Verbinden</string>
    <string name="result">Ergebnis</string>
    <string name="placeholder">Platzhalter</string>
    <string name="placeholder_int">123</string>
    <string name="settings">Einstellungen</string>
    <string name="name">Name</string>
    <string name="background">Hintergrund</string>
    <string name="alternative_pixelformat">Alt. Pixelformat</string>
	
    
     <!-- do not change -->
    <string name="arrow_up">\u2191</string>
    <string name="arrow_down">\u2193</string>
    <string name="arrow_left">\u2190</string>
    <string name="arrow_right">\u2192</string>
    <!--  until here -->
    
    <string name="address_in_use">Adresse wird bereits verwendet. Konnte nicht nach Server suchen. Bitte Anwendung neu starten.</string>
    <string name="unknown_error">Unbekannter Fehler</string>
    <string name="disconnected">Verbindung wurde getrennt</string>
    <string name="could_not_connect">Konnte keine Verbindung zum Server aufbauen</string>
    <string name="could_not_open_server">Konnte keinen Server starten. Bitte starten Sie die Anwendung neu und versuchen es erneut.</string>
    <string name="world_castle">Castle</string>
    <string name="room_add_ai">+Ai</string>
    <string name="room_connect">Connect</string>
    <string name="players_table_header">Local</string>
    <string name="hosts_table_header">Server</string>
    <string name="result_player_name_header">Name</string>
    <string name="result_player_score_header">Score</string>
    <string name="result_player_image">Player image</string>
    <string name="host_bluetooth_game_question">Host game?</string>
    <string name="host_bluetooth_game">Host</string>
    <string name="client_bluetooth_game">Client</string>
    <string name="menu_sound">Sound</string>
    <string name="menu_music">Music</string>
    
</resources>