<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|right"
    android:orientation="vertical" >

    <Button
        android:id="@+id/button_up"
        style="@style/button_style"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="0dp"
        android:text="@string/arrow_up" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_left"
            style="@style/button_style"
            android:text="@string/arrow_left" />

        <Button
            android:id="@+id/button_down"
            style="@style/button_style"
            android:text="@string/arrow_down" />

        <Button
            android:id="@+id/button_right"
            style="@style/button_style"
            android:text="@string/arrow_right" />
    </LinearLayout>

</LinearLayout>