<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input" />

    <RadioGroup
        android:id="@+id/start_input_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/start_button_distributed_keyboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/distributed_keyboard" />

        <RadioButton
            android:id="@+id/start_button_hardware_keyboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hardware_keyboard" />
    </RadioGroup>

</LinearLayout>