<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="@dimen/settings_label_width"
            android:layout_height="wrap_content"
            android:text="@string/zoom" />

        <SeekBar
            android:id="@+id/zoom"
            android:layout_width="@dimen/slider_width"
            android:layout_height="wrap_content"
            android:max="5" />

        <TextView
            android:id="@+id/settings_zoom_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="@dimen/settings_label_width"
            android:layout_height="wrap_content"
            android:text="@string/speed" />

        <SeekBar
            android:id="@+id/speed"
            android:layout_width="@dimen/slider_width"
            android:layout_height="wrap_content"
            android:max="20" />

        <TextView
            android:id="@+id/settings_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/menu_sound_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_sound" />

        <CheckBox
            android:id="@+id/menu_music_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_music" />

    </LinearLayout>

</LinearLayout>