<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/result_player_image"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/result_entry_height"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingRight="10dp"
        android:background="@null"
        android:contentDescription="@string/result_player_image" />

    <TextView
        android:id="@+id/result_player_place"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/result_entry_height"
        android:layout_toRightOf="@id/result_player_image"
        android:text="@string/placeholder"
        android:textSize="@dimen/result_entry_text_size" />

    <TextView
        android:id="@+id/result_player_name"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/result_entry_height"
        android:layout_centerHorizontal="true"
        android:text="@string/placeholder"
        android:textSize="@dimen/result_entry_text_size" />

    <TextView
        android:id="@+id/result_player_score"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/result_entry_height"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/placeholder_int"
        android:textSize="@dimen/result_entry_text_size" />

</RelativeLayout>